--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,3 @@
-
-
-
 .App {
   text-align: center;
 }
@@ -12,7 +9,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #060607;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -22,16 +19,3 @@
   color: white;
 }
 
-.Matrice {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  width: 100vw;
-}
-
-.Col {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  height: 100vh;
-}
